--- a/hahmot/hahmosivu.html
+++ b/hahmot/hahmosivu.html
@@ -3,23 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>springfield-sivu</title>
+    <link rel="stylesheet" href="../styles.css">
+    <title>Hahmosivu</title>
     
 </head>
 <body>
     <div class="Container">
         <div class="header">
-            <div class="logo"><img src="./kuvat/The_Simpsons_yellow_logo.svg.png" width="300px"></div>
+            <div class="logo"><img src="../kuvat/The_Simpsons_yellow_logo.svg.png" width="300px"></div>
             <h1>The Simpsons Page</h1>
         </div>
         <div class="mainNav">
-            <div class="link"><a href="./springfield-sivu.html">Springfield</a></div>
-            <div class="link"><a href="./hahmot/hahmosivu.html">Hahmot</a></div>
-            <div class="link"><a href="./foorumisivu.html">Foorumi</a></div>
+            <div class="link"><a href="../springfield-sivu.html">Springfield</a></div>
+            <div class="link"><a href="./hahmosivu.html">Hahmot</a></div>
+            <div class="link"><a href="../foorumisivu.html">Foorumi</a></div>
         </div>
         <div class="content">
-            <h2>Simpson koti</h2>
             <div class="gallery">
                 <div class="image">
                     <a href="/simpsonkoti1.html">
