--- a/moes6.html
+++ b/moes6.html
@@ -15,8 +15,8 @@
         </div>
         <div class="mainNav">
             <div class="link"><a href="./springfield-sivu.html">Springfield</a></div>
-            <div class="link"><a href="./hahmosivu.html">Characters</a></div>
-            <div class="link"><a href="./foorumisivu.html">Forum</a></div>
+            <div class="link"><a href="./hahmot/hahmosivu.html">Hahmot</a></div>
+            <div class="link"><a href="./foorumisivu.html">Foorumi</a></div>
         </div>
         <div class="content">
             <div class="back"><a href="/Moes.html"><h2>&lt;Takaisin</h2></a></div>
