--- a/Kwik-E-Mart.html
+++ b/Kwik-E-Mart.html
@@ -23,32 +23,32 @@
             <h2>Kwik-E-Mart</h2>
             <div class="gallery">
                 <div class="image">
-                    <a href="/kwik1.html">
+                    <a href="./kwik1.html">
                         <img src="./kuvat/Kwik-e-mart/kuva1.jpg" alt="Kwik-E-Mart">
                     </a>
                 </div>
                 <div class="image">
-                    <a href="/kwik2.html">
+                    <a href="./kwik2.html">
                         <img src="./kuvat/Kwik-e-mart/kuva2.jpg" alt="Kwik-E-Mart">
                     </a>
                 </div>
                 <div class="image">
-                    <a href="/kwik3.html">
+                    <a href="./kwik3.html">
                         <img src="./kuvat/Kwik-e-mart/kuva3.jpg" alt="Kwik-E-Mart">
                     </a>
                 </div>
                 <div class="image">
-                    <a href="/kwik4.html">
+                    <a href="./kwik4.html">
                         <img src="./kuvat/Kwik-e-mart/kuva4.jpg" alt="Kwik-E-Mart">
                     </a>
                 </div>
                 <div class="image">
-                    <a href="/kwik5.html">
+                    <a href="./kwik5.html">
                         <img src="./kuvat/Kwik-e-mart/kuva5.jpg" alt="Kwik-E-Mart">
                     </a>
                 </div>
                 <div class="image">
-                    <a href="/kwik6.html">
+                    <a href="./kwik6.html">
                         <img src="./kuvat/Kwik-e-mart/kuva6.jpg" alt="Kwik-E-Mart">
                     </a>
                 </div>
