--- a/Moes.html
+++ b/Moes.html
@@ -23,32 +23,32 @@
             <h2>Moe's Tavern</h2>
             <div class="gallery">
                 <div class="image">
-                    <a href="/moes1.html">
+                    <a href="./moes1.html">
                         <img src="./kuvat/Moe's/kuva1.jpg" alt="Simpsonien koti">
                     </a>
                 </div>
                 <div class="image">
-                    <a href="/moes2.html">
+                    <a href="./moes2.html">
                         <img src="./kuvat/Moe's/kuva2.jpg" alt="Simpsonien koti">
                     </a>
                 </div>
                 <div class="image">
-                    <a href="/moes3.html">
+                    <a href="./moes3.html">
                         <img src="./kuvat/Moe's/kuva3.jpg" alt="Simpsonien koti">
                     </a>
                 </div>
                 <div class="image">
-                    <a href="/moes4.html">
+                    <a href="./moes4.html">
                         <img src="./kuvat/Moe's/kuva4.jpg" alt="Simpsonien koti">
                     </a>
                 </div>
                 <div class="image">
-                    <a href="/moes5.html">
+                    <a href="./moes5.html">
                         <img src="./kuvat/Moe's/kuva5.jpg" alt="Simpsonien koti">
                     </a>
                 </div>
                 <div class="image">
-                    <a href="/moes6.html">
+                    <a href="./moes6.html">
                         <img src="./kuvat/Moe's/kuva6.jpg" alt="Simpsonien koti">
                     </a>
                 </div>
