--- a/kwik1.html
+++ b/kwik1.html
@@ -20,7 +20,7 @@
             <a href="./foorumisivu.html">Foorumi</a>
         </div>
         <div class="content">
-            <div class="back"><a href="/Kwik-E-Mart.html"><h2>&lt;Takaisin</h2></a></div>
+            <div class="back"><a href="./Kwik-E-Mart.html"><h2>&lt;Takaisin</h2></a></div>
             <img src="./kuvat/Kwik-e-mart/kuva1.jpg" alt="Kwik-E-Mart" width="100%">
         </div>
     </div>
