--- a/simpsonkoti2.html
+++ b/simpsonkoti2.html
@@ -20,7 +20,7 @@
             <a href="./foorumisivu.html">Foorumi</a>
         </div>
         <div class="content">
-            <div class="back"><a href="/simpsons-home.html"><h2>&lt;Takaisin</h2></a></div>
+            <div class="back"><a href="./simpsons-home.html"><h2>&lt;Takaisin</h2></a></div>
             <img src="./kuvat/simpsonkoti/kuva2.jpg" alt="Simpsonien koti" width="100%">
         </div>
     </div>
