--- a/simpsons-home.html
+++ b/simpsons-home.html
@@ -23,52 +23,52 @@
             <h2>Simpson koti</h2>
             <div class="gallery">
                 <div class="image">
-                    <a href="/simpsonkoti1.html">
+                    <a href="./simpsonkoti1.html">
                         <img src="./kuvat/simpsonkoti/kuva1.jpg" alt="Simpsonien koti">
                     </a>
                 </div>
                 <div class="image">
-                    <a href="/simpsonkoti10.html">
+                    <a href="./simpsonkoti10.html">
                         <img src="./kuvat/simpsonkoti/kuva10.jpg" alt="Simpsonien koti">
                     </a>
                 </div>
                 <div class="image">
-                    <a href="/simpsonkoti2.html">
+                    <a href="./simpsonkoti2.html">
                         <img src="./kuvat/simpsonkoti/kuva2.jpg" alt="Simpsonien koti">
                     </a>
                 </div>
                 <div class="image">
-                    <a href="/simpsonkoti3.html">
+                    <a href="./simpsonkoti3.html">
                         <img src="./kuvat/simpsonkoti/kuva3.jpg" alt="Simpsonien koti">
                     </a>
                 </div>
                 <div class="image">
-                    <a href="/simpsonkoti4.html">
+                    <a href="./simpsonkoti4.html">
                         <img src="./kuvat/simpsonkoti/kuva4.jpg" alt="Simpsonien koti">
                     </a>
                 </div>
                 <div class="image">
-                    <a href="/simpsonkoti5.html">
+                    <a href="./simpsonkoti5.html">
                         <img src="./kuvat/simpsonkoti/kuva5.jpg" alt="Simpsonien koti">
                     </a>
                 </div>
                 <div class="image">
-                    <a href="/simpsonkoti6.html">
+                    <a href="./simpsonkoti6.html">
                         <img src="./kuvat/simpsonkoti/kuva6.jpg" alt="Simpsonien koti">
                     </a>
                 </div>
                 <div class="image">
-                    <a href="/simpsonkoti7.html">
+                    <a href="./simpsonkoti7.html">
                         <img src="./kuvat/simpsonkoti/kuva7.jpg" alt="Simpsonien koti">
                     </a>
                 </div>
                 <div class="image">
-                    <a href="/simpsonkoti8.html">
+                    <a href="./simpsonkoti8.html">
                         <img src="./kuvat/simpsonkoti/kuva8.jpg" alt="Simpsonien koti">
                     </a>
                 </div>
                 <div class="image">
-                    <a href="/simpsonkoti9.html">
+                    <a href="./simpsonkoti9.html">
                         <img src="./kuvat/simpsonkoti/kuva9.jpg" alt="Simpsonien koti">
                     </a>
                 </div>
