--- a/springfield-sivu.html
+++ b/springfield-sivu.html
@@ -23,17 +23,17 @@
         <div class="content">
             <div class="gallery">
                 <div class="image">
-                    <a href="/simpsons-home.html">
+                    <a href="./simpsons-home.html">
                         <img src="./kuvat/Home-Simpsons.webp" alt="Simpsonien koti">
                     </a>
                 </div>
                 <div class="image">
-                    <a href="/Moes.html">
+                    <a href="./Moes.html">
                         <img src="kuvat/moe's.jpg" alt="Moe&apos;s">
                     </a>
                 </div>
                 <div class="image">
-                    <a href="/Kwik-E-Mart.html">
+                    <a href="./Kwik-E-Mart.html">
                         <img src="./kuvat/Kwik-E-Mart.jpg" alt="Kwik-E-Mart">
                     </a>
                 </div>
