--- a/moes5.html
+++ b/moes5.html
@@ -20,7 +20,7 @@
             <a href="./foorumisivu.html">Foorumi</a>
         </div>
         <div class="content">
-            <div class="back"><a href="/Moes.html"><h2>&lt;Takaisin</h2></a></div>
+            <div class="back"><a href="./Moes.html"><h2>&lt;Takaisin</h2></a></div>
             <img src="./kuvat/Moe's/kuva5.jpg" alt="Simpsonien koti" width="100%">
         </div>
     </div>
